prometheus/prometheus/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  labels:
    app: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    -  hosts:
       - "prometheus.avolokhov.pro"
       secretName: "letsencrypt-prometheus"
  rules:
  - host: "prometheus.avolokhov.pro"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
